Correction alignement après changement font

--- a/JournalApp.Web/wwwroot/css/site.css
+++ b/JournalApp.Web/wwwroot/css/site.css
@@ -104,7 +104,7 @@ body {
         white-space:nowrap;
         overflow:hidden;
         padding:0px 0 1px 0.6rem;
-        vertical-align:text-bottom;
+        vertical-align:bottom;
         
     }
 
